# pdx_mod_manager

./: Cargo.toml
.github/workflows/: ci.yml
console/src/: kb.rs  windows_term.rs
src/: filesystem.rs  main.rs  remote.rs
src/interface/: games.rs  mod.rs  mods.rs
