[package]
name = "pdx_mod_manager"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
dialoguer = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["brotli", "json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "0.5"
bytes = "1"
futures-util = "0.3"
toml = "0.5"
directories = "3"
async-recursion = "0.3"

[profile.release]
codegen-units = 1
lto = true

[patch.crates-io]
console = { path = "console" }
